--- a/beta/index.html
+++ b/beta/index.html
@@ -22,6 +22,8 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_renovate/biomejs-pre-commit-2.x.html'>Unified diff core:dev vs beta:origin/renovate/biomejs-pre-commit-2.x</a></li>
+
                         <li><a href='diff_snap.html'>Unified diff core:dev vs beta:origin/snap</a></li>
 
                 </ul>
