--- a/beta/index.html
+++ b/beta/index.html
@@ -28,6 +28,8 @@
 
                         <li><a href='diff_renovate/biomejs-pre-commit-2.x.html'>Unified diff core:dev vs beta:origin/renovate/biomejs-pre-commit-2.x</a></li>
 
+                        <li><a href='diff_renovate/pre-commit-pre-commit-hooks-6.x.html'>Unified diff core:dev vs beta:origin/renovate/pre-commit-pre-commit-hooks-6.x</a></li>
+
                         <li><a href='diff_snap.html'>Unified diff core:dev vs beta:origin/snap</a></li>
 
                 </ul>
