--- a/beta/index.html
+++ b/beta/index.html
@@ -22,6 +22,8 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
