--- a/beta/index.html
+++ b/beta/index.html
@@ -32,6 +32,8 @@
 
                         <li><a href='diff_remove_diagn.html'>Unified diff core:dev vs beta:origin/remove_diagn</a></li>
 
+                        <li><a href='diff_renovate/biomejs-pre-commit-2.x.html'>Unified diff core:dev vs beta:origin/renovate/biomejs-pre-commit-2.x</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
